added broken react prerendering

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	</head>
 	<body>
 		<div id="container">
-			<pre>Loading a fuckton of JavaScript...</pre>
+
+<!-- pre rendered elements -->
+
 		</div>
 		<script src="bundle.js"></script>
 	</body>
