--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	</head>
 	<body>
 		<div id="container">
+			<div>
 
 <!-- pre rendered elements -->
 
+			</div>
 		</div>
 		<script src="bundle.js"></script>
 	</body>
